# vizor-wallet

./: .fvmrc  .gitignore  .gitignore.vizor-local-setup  AGENTS.md  CLAUDE.md  FIGMA-AI-FIX.md  README.md  SPENDABILITY_PIR.md  analysis_options.yaml  clear-app-macos.sh  clear-app.sh  dart_test.yaml  docker-compose.zcash-ironwood-regtest.yml  pubspec.yaml  restart-vizor  run-regtest-rust-tests.sh  widgetbook.sh
.cargo/: config.toml
design_suggestion/: index.html
dev/: open_payment_uri.sh  payment_uri_demo.html
docs/: sprout-migration.md  vizor-zwap-mainnet-support-plan.md  voting-bundle-indexed-spec.md
fastlane/: Fastfile  Matchfile
figma-ai-fix/: 00-source-and-scope.md  01-color-system.md  02-sizing-and-layout.md  03-typography.md  04-effects-and-grid.md  05-brand-and-app-icon.md  06-icons.md  07-illustrations-assets-and-placeholders.md  08-actions-status-and-feedback.md  09-inputs-selection-and-dropdowns.md  10-navigation-tabs-and-modals.md  11-data-cards-lists-and-tables.md  12-swap-components.md  13-platform-and-local-utilities.md
integration_test/: mainnet_mobile_create_wallet_state_test.dart  mainnet_mobile_fresh_install_keychain_cleanup_test.dart  mobile_account_management_dogfood_test.dart  mobile_onboarding_dogfood_test.dart  payment_uri_prefill_test.dart  regtest_fallback_endpoint_test.dart  regtest_import_sync_test.dart  regtest_ironwood_migration_expiry_recovery_test.dart  regtest_ironwood_migration_large_balance_test.dart  regtest_ironwood_migration_many_notes_test.dart  regtest_ironwood_migration_mixed_notes_test.dart  regtest_ironwood_migration_multi_account_test.dart  regtest_ironwood_migration_reorg_test.dart  regtest_ironwood_migration_restart_prepare_test.dart  (+37 more)
native/hashbind_prover/: Cargo.toml  README.md  rust-toolchain.toml
native/hashbind_prover/apple/: VizorHashbindProver.podspec
native/hashbind_prover/fixtures/: hashbind_inputs_golden.json  pallas.pkv
native/hashbind_prover/include/: vizor_hashbind.h
native/hashbind_prover/src/: hashbind_core.rs  lib.rs
native/hashbind_prover/tests/: prove_roundtrip.rs
(+1271 files in other folders)
